--- a/web/.gitignore
+++ b/web/.gitignore
@@ -17,5 +17,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-web/public/images/uploads/platform/1715432509.jpg
-/web/public/images
+/public/images
+/public/images
